--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Shooter_dust2.Shooter_dust2
-EditorStartupMap=/Game/Levels/Shooter_dust2.Shooter_dust2
+GameDefaultMap=/Game/Menu/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Menu/MenuLevel.MenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
