--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Menu/MenuLevel.MenuLevel
 EditorStartupMap=/Game/Menu/MenuLevel.MenuLevel
+GameInstanceClass=/Game/BP_ShooterGameInstance.BP_ShooterGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
